--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: node_js
 node_js:
 - 7
   before_install:
-    - npm i -g npm@version-number
-    - npm install ws
+    - npm i -g npm@7
+    
