--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - 10
 install:
 - rm -rf node_modules
-- npm install -g coveralls
+- npm install -g ws
 - npm install
 script: node screen.js  
