--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - 10
 install:
-- rm -rf node_modules
-- npm install ws
+- sudo rm -rf node_modules
+- sudo npm install ws
 script: node screen.js  
